--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -1,6 +1,6 @@
 .section-about {
   &__heading {
-    padding-top: 0;
+    padding-top: 5rem;
     display: flex;
     justify-content: center;
   }
