--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,7 +1,9 @@
 .section-experiences {
-  padding-top: 10rem;
+  // padding-top: 10rem;
   // height: 100%;
   width: 100%;
+  height: auto;
+
   background-color: $color-grey-light-1;
 }
 
