--- a/sass/layout/_experiences.scss
+++ b/sass/layout/_experiences.scss
@@ -4,10 +4,10 @@
   width: 90%;
   justify-content: center;
   margin: 0 auto;
+  grid-template-rows: repeat(auto-fit, 34rem);
+  grid-template-columns: repeat(auto-fit, 55rem);
 
-  grid-template-rows: 1fr 1fr auto auto;
-  grid-template-columns: repeat(auto-fit, 45rem);
-  overflow: hidden;
+  // overflow: hidden;
 
   grid-gap: 5rem;
 }
@@ -15,4 +15,10 @@
 .section-experiences__heading {
   display: flex;
   justify-content: center;
+}
+
+@media only screen and (min-width: 1944px) {
+  .experiences-container {
+    grid-template-columns: repeat(2, 55rem);
+  }
 }
