--- a/sass/components/_find-my-trip.scss
+++ b/sass/components/_find-my-trip.scss
@@ -59,7 +59,7 @@
     font-weight: 500;
     // font-size: 1rem;
     text-transform: uppercase;
-
+    z-index: 1000;
     transition: all 0.4s;
 
     &:focus {
