--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -25,7 +25,7 @@
             rgba($color-white, 0.25),
             rgba($color-white, 0.25)
           ),
-          url(../img/dan-freeman-7Zb7kUyQg1E-unsplash.jpg);
+          url(../img/Australia-Compressed.jpg);
         background-size: cover;
       }
 
@@ -35,7 +35,7 @@
             rgba($color-white, 0.1),
             rgba($color-white, 0.1)
           ),
-          url(../img/jakob-owens-5F_c9i3JP0I-unsplash.jpg);
+          url(../img/Thailand-Compressed.jpg);
         background-size: cover;
       }
 
@@ -45,7 +45,7 @@
             rgba($color-white, 0.2),
             rgba($color-white, 0.2)
           ),
-          url(../img/niklas-weiss--2WlTWZLnRc-unsplash.jpg);
+          url(../img/Africa-Compressed.jpg);
         background-size: cover;
       }
 
@@ -55,7 +55,7 @@
             rgba($color-white, 0.2),
             rgba($color-white, 0.2)
           ),
-          url(../img/hu-chen-60XLoOgwkfA-unsplash.jpg);
+          url(../img/Bali-Compressed.jpg);
         background-size: cover;
       }
     }
