--- a/sass/layout/_heading.scss
+++ b/sass/layout/_heading.scss
@@ -1,7 +1,7 @@
 .header {
   height: 105vh;
   width: auto;
-  background-image: url(../img/Home.jpg);
+  background-image: url(../img/Home-Compressed.jpg);
   background-size: cover;
   background-position: top;
 
