--- a/sass/layout/_info-form.scss
+++ b/sass/layout/_info-form.scss
@@ -12,7 +12,7 @@
         rgba($color-white, 0.6) 49.9%,
         transparent 50%
       ),
-      url(../img/george-bakos-OvEr7BwXxxg-unsplash.jpg);
+      url(../img/Form-Compressed.jpg);
 
     // background-image: linear-gradient(
     //     120deg,
