--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,16 +1,12 @@
-$color-primary: #83b901;
-$color-primary-light-1: #a2e20a;
-$color-primary-dark-1: #6ab901;
+// TYPOGRAPHY
+$default-font-family: "Raleway";
+$secondary-font-family: "Barlow Semi Condensed";
 
-$color-grey-dark-1: #2e2e2e;
-$color-grey-light-1: #f5f5f5;
-$color-grey-light-2: #e8e8e8;
+// COLOURS
+$color-grey-light-1: #f2f2f2;
+$color-grey-middle-1: #898989;
+$color-grey-dark-1: #373737;
 $color-black: #000;
-$color-white: #fff;
 
-$color-invalid: #ffce42;
-
-$default-font-family: "BigNoodleTitling";
-$backup-font-family: "Teko";
-$secondary-font-family: "Raleway";
-$italic-font-skew-1: skewX(-5deg); ;
+$color-blue-middle-1: #1a86e3;
+$color-blue-light-1: #3ebff1;
