--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,6 +1,6 @@
 *,
-*:after,
-*:before {
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   box-sizing: inherit;
@@ -8,7 +8,7 @@
 
 html {
   font-size: 62.5%;
-  overflow-x: hidden;
+  background-color: $color-grey-light-1;
 }
 
 body {
