--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,6 +1,6 @@
 *,
-*::before,
-*::after {
+*:after,
+*:before {
   margin: 0;
   padding: 0;
   box-sizing: inherit;
@@ -8,7 +8,7 @@
 
 html {
   font-size: 62.5%;
-  background-color: $color-grey-light-1;
+  overflow-x: hidden;
 }
 
 body {
