--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,114 +1,84 @@
-*,
-*::before,
-*::after {
-  font-family: $default-font-family;
+body {
+  font-family: $default-font-family, $backup-font-family;
+  letter-spacing: 3px;
 }
 
-.nav {
-  &__logo--name {
-    font-family: $secondary-font-family;
-    text-transform: uppercase;
-    // font-size: 2rem;
-    font-size: 3vh;
-    font-weight: 500;
-    letter-spacing: 1px;
-  }
+// MODAL
+
+.modal__header {
+  text-transform: uppercase;
 }
 
-.intro {
-  &__heading {
-    // font-size: 4.5rem;
-    font-size: 6vh;
-    color: $color-grey-dark-1;
-    &--span {
-      color: $color-blue-middle-1;
-    }
-    animation: moveInRight 1s;
-  }
-
-  &__sub {
-    color: $color-grey-dark-1;
-    // font-size: 3rem;
-    font-size: 4vh;
-    font-weight: 500;
-    animation: moveInRight 1s;
-  }
-}
-
-.scroll-down {
-  &__text {
-    // font-size: 1.6rem;
-    font-size: 2.5vh;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-  }
-}
-
-.section-header {
-  // font-size: 3rem;
-  font-size: 4.5vh;
-  font-weight: 600;
-  color: $color-grey-dark-1;
-  text-align: center;
-}
-
-// WORK
-.work__header {
-  margin-top: 10vh;
-  margin-bottom: 5vh;
-}
-
-// CONTACT
-.contact {
-  &__text {
-    margin: 0 auto;
-    width: 70%;
-    text-align: center;
-    // font-size: 2.2rem;
-    font-size: 3vh;
-    font-weight: 500;
-
-    &--main {
-      // margin-bottom: 2rem;
-      margin-bottom: 2vh;
-      color: $color-grey-dark-1;
-    }
-
-    &--email {
-      // font-size: 2.5rem;
-      font-size: 3vh;
+.navigation {
+  &__item {
+    a {
+      font-family: $secondary-font-family;
+      font-weight: 500;
+      font-style: initial;
+      font-size: 1.3rem;
+      text-transform: uppercase;
       text-decoration: none;
-      height: auto;
-      font-weight: 600;
-      color: $color-blue-middle-1;
-      transition: all 0.3s;
-
-      // &:hover {
-      //   color: $color-blue-light-1;
-      //   cursor: pointer;
-      // } ADD BACK AT LATER DATE
+      color: $color-grey-light-1;
     }
   }
 }
 
-@media only screen and (max-width: 575px) {
-  .nav {
-    &__logo--name {
-      font-size: 2.5vh;
-    }
+.burger-nav {
+  &__list {
+    font-size: 2.5rem;
+    font-family: $secondary-font-family;
+    font-weight: 500;
+    text-transform: uppercase;
   }
 
-  .intro {
-    &__sub {
-      font-size: 3vh;
+  &__link {
+    &:link,
+    &:visited {
+      color: white;
+      text-decoration: none;
     }
   }
-  .contact {
-    &__text {
-      font-size: 2vh;
-      &--email {
-        font-size: 1.8vh;
-      }
+}
+
+.header {
+  text-transform: uppercase;
+
+  &__text-box {
+    .heading-primary {
+      font-size: 6rem;
+      font-weight: 400;
+      transform: $italic-font-skew-1;
+      color: $color-white;
+      text-shadow: 0 0.4rem 0.3rem rgba($color-black, 0.3);
     }
+  }
+}
+
+// EXPERIENCES
+
+.experiences-heading {
+  padding-top: 15vh;
+  text-transform: uppercase;
+}
+
+// ABOUT
+.about__heading {
+  padding-top: 20vh;
+  text-transform: uppercase;
+}
+
+.about-card {
+  &__heading {
+    font-size: 2rem;
+    color: $color-primary;
+    text-transform: uppercase;
+  }
+
+  &__text {
+    font-size: 1.5rem;
+    font-family: $secondary-font-family;
+    font-weight: 500;
+    letter-spacing: 0.5px;
+    color: $color-grey-dark-1;
   }
 }
