--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,21 +1,80 @@
-.footer {
+.section-footer {
   text-align: center;
+  .footer {
+    &__logo {
+      &--img {
+        margin-top: 5rem;
+        margin-bottom: 5rem;
+        height: 13rem;
+      }
+    }
+    &__nav {
+      width: 100%;
+      height: 10%;
+      display: block;
+      &--list {
+        display: inline-flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        list-style: none;
+      }
+      &--item {
+        margin: 0 1rem 5rem 1rem;
+      }
+      &--link {
+        text-decoration: none;
+        text-transform: uppercase;
+        color: $color-grey-light-1;
+        font-family: $secondary-font-family;
+        font-size: 1.5rem;
 
-  &__link {
-    // font-size: 1.5rem;
-    font-size: 2vh;
-    text-transform: uppercase;
-    color: $color-grey-dark-1;
-    text-decoration: none;
-    font-weight: 500;
-    transition: all 0.3s;
+        &:link,
+        &:visited {
+          display: inline-block;
+          padding: 1rem 2rem;
+          background-image: linear-gradient(
+            120deg,
+            transparent 0%,
+            transparent 49.9%,
+            $color-primary 50%
+          );
+          background-size: 230%;
+          transition: all 0.3s;
+        }
 
-    &:hover {
-      color: $color-blue-middle-1;
+        &:hover {
+          background-position: 100%;
+          transform: translateY(-3px);
+        }
+
+        &:active {
+          transform: translateY(0);
+        }
+
+        &:focus {
+          outline: none;
+        }
+      }
     }
 
-    &:focus {
-      outline: none;
+    &__svgs {
+      display: inline-flex;
+      margin-top: 5rem;
+      margin-bottom: 5rem;
+
+      .social-icon-svg {
+        margin-left: 1rem;
+        margin-right: 1rem;
+        height: 5rem;
+        width: 5rem;
+        fill: $color-primary;
+        transition: all 0.2s;
+
+        &:hover {
+          fill: $color-primary-light-1;
+          transform: translateY(-5px);
+        }
+      }
     }
   }
 }
