--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,25 +1,34 @@
-.header {
-  width: 100%;
-  height: 100vh;
-}
-
-.section-work {
+.section-experiences {
+  padding-top: 10rem;
+  // height: 100%;
   width: 100%;
   height: auto;
-  // padding-bottom: 5rem;
-  padding-bottom: 5vh;
+
+  background-color: $color-grey-light-1;
 }
 
-.section-contact {
+.section-about {
   width: 100%;
-  height: auto;
-  // padding-bottom: 10rem;
-  padding-bottom: 8vh;
+  background-color: $color-grey-light-1;
+  padding-bottom: 5rem;
+  text-align: center;
 }
 
-.footer {
+.section-info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 90vh;
   width: 100%;
+  background-image: linear-gradient(
+    to top right,
+    $color-primary-dark-1,
+    $color-primary-light-1
+  );
+}
+
+.section-footer {
   height: auto;
-  // padding-bottom: 5rem;
-  padding-bottom: 8vh;
+  width: 100%;
+  background-color: $color-grey-dark-1;
 }
